2014-04-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* src/html/classic/help.xsl, CMakeLists.txt: Set version to 5.0.1.

2014-04-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the gsa 5.0.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Set version to 5.0.0. Switch version scheme.

	* src/html/classic/help.xsl: Updated version number.

2014-04-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (cpe-details): Remove redundant
	"Last Modified" item and Actions column in "Reported Vulnerabilities"
	list.

2014-04-16  Matthew Mundell <matthew.mundell@greenbone.net>

	Add permission-style check for Trashcan menu item.

	* src/html/classic/omp.xsl (gsa:may-get-trash): New function.

	* src/html/classic/gsad.xsl (html-gsa-navigation): Only show the
	trashcan item if the user can get trash.

	* src/html/classic/help.xsl (trashcan-availability): New template.
	(trashcan.html): Add availability note.

2014-04-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (exec_omp_get): Add more default landing pages between
	get_reports and get_my_settings.

	* src/gsad_omp.c (get_info): Default to NVTs if info_type is missing.

2014-04-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* README: Update usage.

2014-04-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c, src/gsad_base.c, src/gsad_omp.c, src/validator.c: Sort out
	Doxygen warnings.

2014-04-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (save_auth_omp): Go to get_users instead of edit_user
	on error, because that's the page the form is on.

	* src/html/classic/omp.xsl (get_users): Correct path of
	modify_auth_response.

2014-04-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (get_users): Move Authentication windows
	to underneath the Users window.

2014-04-15  Hani Benhabiles <hani.benhabiles@greenbone.net>
