@@ -1,3 +1,9 @@
+2014-04-28  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	Post branch version bump.
+
+	* src/html/classic/help.xsl, CMakeLists.txt: Set version to 6.0+beta1.
+
 2014-04-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Post release version bump.
